<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">spin.fm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="media_route_menu_title">Connect to Chromecast</string>
    <string name="application_id">1072BDA1</string>
    <string name="test_button">Test Button</string>
    <string name="namespace">spinner</string>
    <string name="insert_handle">Who you be?</string>
    <string name="handle_default">DJ Roomba</string>
    <string name="hook_me_up">Hook me up with…</string>
    <string name="cast_button_description">Big cast button</string>
    <string name="title_activity_room">Now Playing…</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="album_art_description">Current album art</string>
    <string name="thumbs_down_description">Thumbs down image</string>
    <string name="thumbs_up_description">Thumbs up image</string>

</resources>
