<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_purple"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="fm.spin.spinner.ConnectActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_font"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/insert_handle"
        android:id="@+id/insert_handle_title"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_font"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/user_handle"
        android:hint="@string/handle_default"
        android:layout_below="@+id/insert_handle_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/light_purple"
        android:id="@+id/cast_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/cast_button_description"
        android:src="@drawable/ic_media_route_off_holo_light" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_font"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textAlignment="center"
        android:text="@string/hook_me_up"
        android:layout_above="@id/cast_button" />
</RelativeLayout>
