<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_purple"
    tools:context="fm.spin.spinner.RoomActivity">

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->
    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/room_user_handle"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/voting_buttons"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/thumbs_up"
                android:layout_weight="0.5"
                android:contentDescription="@string/thumbs_up_description"
                android:src="@drawable/thumbs_up"
                android:background="@color/light_purple" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/thumbs_down"
                android:layout_weight="0.5"
                android:contentDescription="@string/thumbs_down_description"
                android:src="@drawable/thumbs_down"
                android:background="@color/light_purple" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/spun_by"
            android:layout_above="@id/voting_buttons"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/song_information"
            android:layout_above="@id/spun_by"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_above="@id/song_information"
            android:id="@+id/album_art"
            android:contentDescription="@string/album_art_description" />

    </RelativeLayout>

    <!-- android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         If you're not building against API 17 or higher, use
         android:layout_gravity="left" instead. -->
    <!-- The drawer is given a fixed width in dp and extends the full height of
         the container. -->
    <fragment
        android:id="@+id/navigation_drawer"
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:name="fm.spin.spinner.NavigationDrawerFragment"
        tools:layout="@layout/fragment_room_navigation_drawer" />

</android.support.v4.widget.DrawerLayout>
